Added getSubjects
