# docs/swagger.json
@@ -7,6 +7,26 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/db": {
+            "get": {
+                "description": "Responds with fail or connected status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DbTest"
+                ],
+                "summary": "Basic health check to ensure the service can connect to the db",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DbTest"
+                        }
+                    }
+                }
+            }
+        },
         "/getSubjects": {
             "get": {
                 "description": "Responds with pong status.",
@@ -21,7 +41,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Pong"
+                            "$ref": "#/definitions/models.Subjects"
                         }
                     }
                 }
@@ -49,10 +69,35 @@
         }
     },
     "definitions": {
+        "models.DbTest": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Pong": {
             "type": "object",
             "properties": {
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Subjects": {
+            "type": "object",
+            "properties": {
+                "keyStage": {
+                    "type": "integer"
+                },
+                "purposeOfStudy": {
+                    "type": "string"
+                },
+                "subject": {
+                    "type": "string"
+                },
+                "subjectId": {
                     "type": "string"
                 }
             }
