# models/models.go
@@ -5,9 +5,13 @@ type Pong struct {
 	Status  string  `json:"status"`
 }
 
+type DbTest struct {
+	Status  string  `json:"status"`
+}
+
 type Subjects struct {
-	Subject string  `json:"subject"`
         SubjectID string `json:"subjectId"`
+        Subject string  `json:"subject"`
         KeyStage int     `json:"keyStage"`
 	PurposeOfStudy string `json:"purposeOfStudy"`
 }
